# fastmail-to-gmail

./: .gitignore  README.md  pyproject.toml
src/fastmail_to_gmail/: __init__.py  auth.py  check_status.py  comparator.py  fastmail_client.py  fastmail_fetcher.py  gmail_client.py  gmail_importer.py  label_mapper.py  migrate.py  migration_tracker.py  profile.py  report_generator.py  setup_profile.py  verify.py
